--- a/app/views/tags/feedback/label.html
+++ b/app/views/tags/feedback/label.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="modal-footer">
-            <button type="submit" class="btn primary">Complete purchase</button>
+            <button type="submit" class="btn primary">Send feedback</button>
             <button class="btn close">Cancel</button>
         </div>
     </form>
